having problems with codeblock with removing whitespace, moving to desktop because of bluetooth issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+@import 'introduction-styles.css';
+@import 'reduxPattern-styles.css';
+@import './gettingStarted-styles.css';
+
 :root{
     --primaryColor: #BA2BD2;
     --secondayColor: #707070;
@@ -5,6 +9,7 @@
     --accent2Color: #E0DA62;
     --folderColor: #57B3A1;
 }
+
 
 body {
     font-family: omnes-cyrillic, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,6 +20,13 @@ body {
     grid-template-rows: 100%;
     grid-template-areas: "sideMenuContainer contentContainer";
     
+}
+p span .file {
+    font-family: omnes-cyrillic, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    font-weight: 400px;
+    color: var(--primaryColor);
+    text-decoration: underline;
 }
 h1 {
     font-size: 10%;
@@ -39,6 +51,7 @@ h4 {
     font-family: omnes-cyrillic, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 200;
     font-size: 1.5rem;
+    
 }
 p{
     font-family: omnes-cyrillic, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -85,13 +98,17 @@ p{
     color:var(--primaryColor);
 }
 ul {
-    text-decoration: none;
+    text-decoration: none; 
+    
+    
 }
 li {
     font-family: omnes-cyrillic, 'Segoe IU';
     font-size: 1.2rem;
     text-decoration: none;
+    
 }
+
 li a, p a {
     color: var(--accent1Color);
 }
@@ -183,6 +200,7 @@ li a, p a {
     display: flex;
     flex-direction: column;
     margin-top: 0px;
+    margin-bottom: 20px;
 }
 .chapterHeading {
     width: 100%;
@@ -208,5 +226,22 @@ li a, p a {
     width: 80%;
     margin: auto;
     height: auto;
+}
+.chapterContent h4 {
+    margin-top: 40px;
+}
+.chapterContent ul  {
+    list-style-image: url('../images/SVG/bullet-li2.svg'); 
+    margin-left: 30px;
+}
+
+.chapterContent .chapterContent-ul2 li{
+    list-style-image: url('../images/SVG/bullet-li3.svg');
+    margin-left: 30px;
+}
+
+#reduxPattern .chapterContent .chapterContent-ul-numbered  {
+    list-style:number;
+    
 }
 
